--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ main article {
 /*  Enlaces del nav */
 .menu {
     background: mediumseagreen;
-    padding: 15px 10px;    /* 5px arriba y abajo y 0 en los lados */
+    padding: 5px;    /* 5px arriba y abajo y 0 en los lados */
     box-shadow: 0px 3px 6px rgba(0, 0, 0, .30);
     display: flex;
     align-items: center;
@@ -95,6 +95,7 @@ button {
     margin: 0 auto;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, .30);
     margin-bottom: 20px;
+    position: relative;
 }
 .container-img-logo {
     margin: 0 auto;
@@ -105,6 +106,7 @@ button {
 .container-img-logo img {
     width: 100%;
     height: 300px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, .30);
 }
 .eslogan {
     text-align: center;
@@ -128,7 +130,7 @@ footer a {
     padding: 10px 0;
 }
 footer h3 {
-    color: #364343;
+    color: #fff;
 }
 .container-footer {
     display: grid;
@@ -184,11 +186,9 @@ footer a:hover {
      }
 }
 @media screen and (max-width: 800px) {
-    body {
-        background:  #c7d4d4;
-    }
+
     .menu {
-        padding: 15px 0px;    /* 5px arriba y abajo y 0 en los lados */
+        padding: 10px;    /* 5px arriba y abajo y 0 en los lados */
     }
     .menu .llama {
         display: none;
@@ -224,6 +224,7 @@ footer a:hover {
         display: flex;
         margin: 0 10px;
         border-radius: 6px;
+        width: 40%;
     }
      .btn-menu-cerrar {
         display: none; /* mostramos el icono de cerrar menu para que no se vea en dispositivos moviles */
